<resources>
    <!-- general application strings -->
    <string name="app_name">Acronym Finder</string>
    <string name="app_version">version 1.0</string>
    <string name="app_copyright">© 2016, Tony Guyot</string>
    <string name="app_description">Search the meaning of an acronym…</string>

    <!-- menu items -->
    <string name="action_settings">Settings</string>

    <!-- tab titles -->
    <string name="tab_query">Query</string>
    <string name="tab_history">History</string>
    <string name="tab_info">Info</string>

    <!-- query fragment -->
    <string name="query_hint">Enter an acronym…</string>
    <string name="query_submit">Search</string>
    <string name="query_in_progress">Search in progress…</string>
    <string name="query_no_result">No result found</string>
    <string name="query_no_result_for_sss">No result found for &lt;b>%1$s&lt;/b></string>
    <plurals name="query_nnn_results_for_sss">
        <item quantity="one">%1$d result found for &lt;b>%2$s&lt;/b></item>
        <item quantity="other">%1$d results found for &lt;b>%2$s&lt;/b></item>
        <!-- html tags are escaped since they are not permitted when using
             String.format() - Html.fromHtml() must be used in order
             to retrieve the tags -->
    </plurals>
    <string name="query_no_query">No search has been performed yet</string>
    <string name="query_error_server">Error: cannot connect to the server</string>
    <string name="query_error_parse">Error: cannot decode response from server</string>
    <string name="query_error_response_nnn">Error: did not receive response from server (HTTP error %d)</string>
    <string name="query_error_response">Error: did not receive response from server</string>
    <string name="query_error_other">An error occurred</string>

    <!-- history fragment -->
    <string name="history_empty">History is empty</string>
    <string name="history_error">Could not retrieve history!</string>
    <string name="history_clear">Clear history</string>
    <string name="history_refresh">Refresh history</string>
    <string name="history_confirm">Do you want to remove all items from the history?</string>

    <!-- info fragment -->
    <string name="info_server">This application uses the Acronym Server from Silmaril (http://acronyms.silmaril.ie). Other servers may be added in the future.</string>
    <string name="info_source">The entire source code of this application is released freely under the Apache license and is available on GitHub. for more info, see http://tonyguyot.github.io.</string>
</resources>
