<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.tonyguyot.acronym.InfoFragment"
    >

    <!-- name of application (with icon) -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:padding="8dp"
        android:drawableStart="@mipmap/ic_launcher"
        android:drawableLeft="@mipmap/ic_launcher"
        />

    <!-- version number -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:padding="8dp"
        />

    <!-- copyright information -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_copyright"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:padding="8dp"
        />

    <!-- information about the Silmaril web server -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_server"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:padding="8dp"
        android:paddingTop="24dp"
        android:linksClickable="true"
        />

    <!-- information about the source code on GitHub -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_source"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:padding="8dp"
        />

</LinearLayout>
