<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.tonyguyot.acronym.QueryFragment">

    <!-- First part: the query text box -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/query_entry"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/query_hint"
            android:layout_weight="3"
            />

        <Button
            android:id="@+id/query_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_submit"
            android:layout_weight="1"
            />
    </LinearLayout>

    <!-- Second part: the result list -->
    <TextView
        android:id="@+id/query_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/query_no_query"
        />

</LinearLayout>
